# ts3-server-hook

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  LICENSE_EXCEPTIONS.md  PROTOCOL.md  README.md
.github/workflows/: build.yaml
cmake/: asio-config.cmake  libmem-config.cmake  utils.cmake
examples/: .gitignore  ts3server.sh
src/: asio.h  constant.h  debug.cc  debug.h  hook.cc  hook.h  protocol.cc  protocol.h  server.cc  server.h
src/platform/glibc/: init.cc
src/util/: cutils.cc  cutils.h  lmutils.cc  lmutils.h  packet-buffer.cc  packet-buffer.h
tools/: build-release.sh  cpplint.sh  fetch-libmem.sh  format.sh  print-version.sh
tools/docker-env/: linux-gnu.Dockerfile
